[gd_scene load_steps=3 format=3 uid="uid://h3iyrj1wlmo5"]

[ext_resource type="Script" path="res://lobby.gd" id="1_lobby"]
[ext_resource type="Script" path="res://NetworkManager.gd" id="2_k5nmd"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="NetworkManager" type="Node3D" parent="."]
script = ExtResource("2_k5nmd")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Tower Blocks Multiplayer"
horizontal_alignment = 1

[node name="AddressInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "localhost"
placeholder_text = "Server Address"

[node name="PortInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "9090"
placeholder_text = "Port Number"

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
